--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/chiefslider.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/6e2b9d92b6.js" crossorigin="anonymous"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js" integrity="sha256-h0cGsrExGgcZtSZ/fRz4AwV+Nn6Urh/3v3jFRQ0w9dQ=" crossorigin="anonymous"></script>    
     <script src="js/jquery.scrollme.js"></script>
     <title>Ansaligy</title>
 
